# G3-JOY-1

./: .gitignore  42minjoy.lib  CMakeLists.txt  G3.url  INSTALL.md  INSTALL.txt  LICENSE  README.md  accpost.joy  accread.joy  acctest.joy  amount.joy  balview.joy  datefn.joy  datein.joy  editch.joy  editln.joy  filter.joy  findacc.joy  formin.joy  functn.joy  g3  g3.bat  g3.joy  getkey.joy  header.joy  jrnpost.joy  jrnread.joy  jrntest.joy  lang.joy  leap.joy  limits.joy  longin.joy  menuin.joy  nextseq.joy  number.joy  paging.joy  palview.joy  prcpost.joy  prcread.joy  (+13 more)
G3/: account.joy  amount.joy  atari.joy  balance.joy  bank.joy  bigset.joy  box.joy  cash.joy  clear.joy  closing.joy  color.joy  cursor.joy  datein.joy  editmul.joy  editsgl.joy  entry.joy  exit.joy  field.joy  filter.joy  general.joy  getkey.joy  ibmpc.joy  init.joy  input.joy  intro.joy  journal.joy  keys.joy  leap.joy  ledger.joy  line.joy  mainmenu.joy  menu.joy  notes.joy  pager.joy  percent.joy  post.joy  print.joy  profit.joy  read.joy  regmenu.joy  (+12 more)
G3/lang/: langDE.joy  langEN.joy  langFR.joy  langNL.joy
doc/: INSTALL.md
lang/: langEN.joy  langNL.joy
